Fixed iframe size on mobile

--- a/style.css
+++ b/style.css
@@ -35,10 +35,10 @@ h1 {
 }
 
 iframe {
-    min-width: 710px;
-    min-height: 200px;
-    width: 100%;
-    height: 100%;
+    width: 710px;
+    height: 200px;
+    max-width: 100%;
+    max-height: 100%;
 }
 footer {
     position: absolute;
